added better formatting

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+label{
+	display: block;
+	cursor: pointer;
+}
+
+input + label{
+	display: block;
+}
+
 input{
 	border: 3px solid hotpink;
 	background-color: pink;
@@ -12,4 +21,5 @@ button{
 	font-size: 3rem;
 	padding: 1em;
 	border-radius: 10px;
+	cursor: pointer;
 }
